feat: added user id to register in url created
